--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -17,7 +17,7 @@
   .ProseMirror {
     position:static;
     overflow:auto;
-    heigh: 100%;
+    height: 100%;
     height: ~"calc(100% - 26px)";
     height: ~"-o-calc(100% - 26px)"; /* opera */
     height: ~"-webkit-calc(100% - 26px)"; /* google, safari */
